--- a/components/redis-server/redis-server.yaml
+++ b/components/redis-server/redis-server.yaml
@@ -12,6 +12,6 @@ metadata:
 spec:
   type: service
   lifecycle: experimental
-  owner: team-a
+  owner: mambg-tmm-team
   system: yelb
   dependsOn: [Component:yelb-db]
