--- a/components/yelb-ui/yelb-ui.yaml
+++ b/components/yelb-ui/yelb-ui.yaml
@@ -15,6 +15,6 @@ metadata:
 spec:
   type: service
   lifecycle: experimental
-  owner: team-a
+  owner: mambg-tmm-team
   system: yelb
   dependsOn: [Component:yelb-appserver]
