--- a/systems/yelb-system.yaml
+++ b/systems/yelb-system.yaml
@@ -6,5 +6,5 @@ metadata:
   annotations:
     'backstage.io/techdocs-ref': dir:.
 spec:
-  owner: team-a
+  owner: mambg-tmm-team
   domain: cloud-apps
